"Updated index.html and style.css: renamed 'get-started' to 'get-started-btn' in header, updated CSS styles for .get-started-btn, .container, .container-child, .title, .desc, and .get

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <path fill-rule="evenodd" clip-rule="evenodd" d="M94.8603 27.1164C96.37 28.0388 98.0834 28.5 100.001 28.5C101.342 28.5 102.589 28.2512 103.739 27.7536C104.623 27.3709 105.366 26.8482 105.967 26.1856V28.0631H111V0.5H105.608V9.85192C105.094 9.33528 104.489 8.90631 103.793 8.56502C102.678 8.01886 101.402 7.74577 99.9646 7.74577C98.0954 7.74577 96.4059 8.20698 94.8962 9.12939C93.3865 10.0518 92.1883 11.2958 91.3017 12.8615C90.415 14.4272 89.9717 16.181 89.9717 18.1229C89.9717 20.0405 90.409 21.7883 91.2837 23.3661C92.1584 24.9439 93.3506 26.194 94.8603 27.1164ZM103.236 22.8926C102.493 23.3538 101.63 23.5844 100.648 23.5844C99.6651 23.5844 98.7845 23.3538 98.0057 22.8926C97.2268 22.4314 96.6218 21.7881 96.1904 20.9628C95.7591 20.1375 95.5434 19.1908 95.5434 18.1228C95.5434 17.0547 95.7591 16.1141 96.1904 15.3009C96.6218 14.4877 97.2268 13.8445 98.0057 13.3711C98.7845 12.8978 99.6651 12.6611 100.648 12.6611C101.63 12.6611 102.493 12.8917 103.236 13.3529C103.979 13.8141 104.56 14.4574 104.979 15.2827C105.398 16.108 105.608 17.0547 105.608 18.1228C105.608 19.1908 105.398 20.1375 104.979 20.9628C104.56 21.7881 103.979 22.4314 103.236 22.8926Z" fill="#13183F"/>
             </svg>
             
-        <a href="" class="get-started">Get Started</a>
+        <a href="" class="get-started-btn">Get Started</a>
     </header>
     <div class="hero">
         <div>
@@ -33,27 +33,27 @@
         <div class="container-child">
             <p class="title">Animation</p>
             <p class="desc">Create beautiful, usable interfaces to help shape the future of how the web looks.</p>
-            <p class="get-stared">Get Started</p>
+            <p class="get-started">Get Started</p>
         </div>
         <div class="container-child">
             <p class="title">Design</p>
             <p class="desc">Learn the latest animation techniques to create stunning motion design and captivate your audience.</p>
-            <p class="get-stared">Get Started</p>
+            <p class="get-started">Get Started</p>
         </div>
         <div class="container-child">
             <p class="title">Photography</p>
             <p class="desc">Explore critical fundamentals like lighting, composition, and focus to capture exceptional photos.</p>
-            <p class="get-stared">Get Started</p>
+            <p class="get-started">Get Started</p>
         </div>
         <div class="container-child">
             <p class="title">Crypto</p>
             <p class="desc">All you need to know to get started investing in crypto. Go from beginner to advanced with this 54 hour course.</p>
-            <p class="get-stared">Get Started</p>
+            <p class="get-started">Get Started</p>
         </div>
         <div class="container-child">
             <p class="title">Business</p>
             <p class="desc">A step-by-step playbook to help you start, scale, and sustain your business without outside investment.</p>
-            <p class="get-stared">Get Started</p>
+            <p class="get-started">Get Started</p>
         </div>
     </div>
 </body>
